fix toast z-index

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -7134,7 +7134,7 @@ body {
 
 .notifications {
   position: fixed;
-  z-index: 999;
+  z-index: 9999;
   padding: 0px;
   top: 4rem;
   right: 1rem;
