--- a/resources/scss/_dashboard.scss
+++ b/resources/scss/_dashboard.scss
@@ -189,8 +189,7 @@ $sidebar-min-with: 15rem;
 //notification
 .notifications{
     position: fixed;
-    // width: 300px;
-    z-index: 999;
+    z-index: 9999;
     padding: 0px;
     top: 4rem;
     right: 1rem;
